force-app/main/default/objects/consumer_field__mdt/consumer_field__mdt.object-meta.xml
<CustomObject>
    <label>consumer field</label>
    <pluralLabel>consumer fields</pluralLabel>
</CustomObject>