force-app/main/default/objects/consumer_field__mdt/fields/set_name__c.field-meta.xml
<CustomField>
    <fullName>set_name__c</fullName>
    <label>set name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>