force-app/main/default/objects/consumer_field__mdt/fields/source_data_set__c.field-meta.xml
<CustomField>
    <fullName>source_data_set__c</fullName>
    <label>source data set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>